--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="pt-br">
    <head>
       <meta charset="UTF-8">
-
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>StarHome</title>
+  </head>
+  <body>
+      <h1>Empresa de Smart Products</h1>
+      <!--- link para o arquivo README.md --->
+      <script src="README.md"></script>
 </body>
 </html>
